<resources>

    <!--<string name="zipcode_api_key">aAX985Yt7ZXdPYQLPKcSSe8m2GGpx2VHDTQMYOf6NdjDbao1UBTNQ19SHQheTdVw</string>-->
    <string name="zipcode_api_key">BdYzZgNmpJKzpyxGtWh4NFD6SJJjfbBQpzqpQdLfXvPm4m2xjkC70fdTYWce8N4y</string>

    <!-- SignIn Activity -->
    <string name="server_client_id">670035138234-n30uj5t6v197v0qcmaplcjb33fufqaop.apps.googleusercontent.com</string>
    <string name="app_name">Trade It</string>
    <string name="web_api_key">AIzaSyDMm0of1d3zvi0YmkkeZuOFgJPgtQMp0bQ</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Post Activity-->
    <string name="post_title_view">Title</string>
    <string name="post_title_hint">This is title.</string>
    <string name="post_tags_view">Tags (format: separate by commma)</string>
    <string name="post_tags_hint">homemade, taste well, delicious</string>
    <string name="post_price_view">Price</string>
    <string name="post_price_hint">123</string>
    <string name="post_choose_view">Choose</string>
    <string name="post_detail_view">Detail</string>
    <string name="post_detail_hint">This is the detail text view.</string>
    <string name="post_zipcode_view">Zipcode</string>
    <string name="post_zipcode_hint">94086</string>

    <!-- Profile Activity -->
    <string name="profile_username">User Name</string>
    <string name="profile_date_of_birth">Date of Birth</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_zipcode">Zipcode</string>
    <string name="profile_whatsup">Whats up</string>
    <string name="profile_sales">Sales</string>
    <string name="profile_watchings">Watchings</string>
    <string name="profile_back_button_text">Back</string>
    <string name="profile_edit_button_text">Edit</string>
    <string name="profile_confirm_button_text">Confirm</string>

</resources>
