<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="steve.yang.tradeit.ui.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_username"/>

            <EditText
                android:id="@+id/profile_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_date_of_birth"/>

            <EditText
                android:id="@+id/profile_date_of_birth_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_phone_number"/>

            <EditText
                android:id="@+id/profile_phone_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_zipcode"/>

            <EditText
                android:id="@+id/profile_zipcode_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_whatsup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_whatsup"/>

            <EditText
                android:id="@+id/profile_whatsup_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_sales"/>

            <TextView
                android:id="@+id/profile_watchings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_watchings"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile_button_back"
                android:layout_width="0dp"
                android:layout_height="@dimen/profile_button_height"
                android:layout_weight="1"
                android:text="@string/profile_back_button_text"/>

            <Button
                android:id="@+id/profile_button_right"
                android:layout_width="0dp"
                android:layout_height="@dimen/profile_button_height"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>
